# chess-books

./: .gitignore  README.md  pyproject.toml
bobby_fischer_teaches_chess/: .gitignore  combine.py  convert_to_epub.py  convert_to_markdown.py  main.py
bobby_fischer_teaches_chess/epub/: bobby_fischer_teaches_chess.md
chess_tactics_for_students/: README.md  extract.py  finalize_pgn.py  get_fen.py  main.py  parser.py  renamer.py
chess_tactics_for_students/pgn/: 01_pins.pgn  02_back_rank_combinations.pgn  03_knight_forks.pgn  04_other_forks_discovered_attacks.pgn  05_discovered_checks.pgn  06_double_checks.pgn  07_discovered_attacks.pgn  08_skewers.pgn  09_double_threats.pgn  10_promoting_pawns.pgn  11_removing_the_guard.pgn  12_perpetual_check.pgn  13_zugzwang_stalemate.pgn
everyones_first_chess_workbook/: .gitignore  chapter_intros.py  chapters.py  chessable.py  create_pgn.py  main.py  solutions.py
everyones_first_chess_workbook/chapters/: 01_Capturing_Free_Pieces.pgn  01__part_1.pgn  02_Counting_Attackers_and_Defenders.pgn  03_Intro_to_Defense.pgn  04_Assorted_Checkmates_in_One.pgn  05_Forks.pgn  06_Pins.pgn  07_Skewer.pgn  08_Discovered_Attack.pgn  09_Discovered_Check_and_Double_Check.pgn  10_Removing_the_Guard.pgn  11_In-Between_Move.pgn  12_Decoy.pgn  13_Overloaded.pgn  14_X-Ray.pgn  15_Interference.pgn  16_Trapping_Pieces.pgn  17_Defense_Recognizing_Threats.pgn  18_Assorted_Checkmates_in_Two.pgn  19_Themed_Checkmate_Patterns.pgn  chapter_05_forks.pgn  (+22 more)
logical_chess_move_by_move/: 1_the_kingside_attack.pgn  2_the_queens_pawn_opening.pgn  3_the_chess_master.pgn
